# actix-and-meilisearch

./: Cargo.toml
src/: main.rs
