[package]
name = "actix_and_meilisearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = { version = "3.2.2", default-features = false, features = ["compress-brotli", "compress-gzip", "rustls"] }
actix-web = { version = "4.2.1", default-features = false, features = ["macros", "compress-brotli", "compress-gzip", "cookies", "rustls"] }
anyhow = "1.0.68"
deserr = "0.5.0"
env_logger = "0.10.0"
futures = "0.3.25"
futures-util = "0.3.25"
log = "0.4.17"
meilisearch-sdk = "0.22.0"
serde_json = "1.0.91"
